[package]
name = "tsastat-rs-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
tsastat-rs-common = { path = "../tsastat-rs-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tsastat-rs"
path = "src/main.rs"
